# slack-bot-ai

./: .env.example  .gitignore  Makefile  README.md  compose.yml  docker-compose.yml  dockerfile  pyproject.toml
project/: api.py  confluence.py  prompting.py  slack.py
project/llm/: gpt.py  prompting.py  vector_store.py
project/schemas/: slack.py
project/use_cases/: answer_slack_message_with_llm.py  ingest_confluence_space.py  perform_web_search_with_llm.py  query_confluence.py
